Upgraded conditions for Conditionals and Loops. added more possibilities to Print, fixes minor errors in Variables, made Calculator more precise, fixes some minor errors in InputScanner